# routes/index.js
@@ -2,15 +2,21 @@
 const express = require("express")
 const router = new express.Router()
 const swaggerDocument = require('../swagger.json');
+const passport = require("passport");
 
 router.use('/', require('./swagger'));
 
-router.get("/", (req, res) => {
-  //#swagger.tags = ['Hello World']
-  res.send('Backend Programming is the BEST!');
-});
 
 router.use('/contacts', require('./contacts'));
+
+router.get('/login', passport.authenticate('github'), (req, res) => {});
+
+router.get('/logout', function(req, res, next) {
+    req.logout(function(err) {
+      if (err) { return next(err); }
+      res.redirect('/');
+    });
+});
 
 
 
